syntax = "proto3";

option csharp_namespace = "Automata.Events.GrpcServices";

package automata.events.grpcServices;

import "SharedApi/Core.proto";

message EventSubscriptionRequest {
  automata.grpcServices.KindUri KindUri = 1;
  EventSubscriptionFilter Filter = 2;
}

message EventSubscriptionFilter {
  repeated string JsonPathFilters = 1;
}

service EventsService {
  rpc ObserveEvents(EventSubscriptionRequest) returns (stream automata.grpcServices.ResourceRecord);
}

